--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
 $searchboxWidth : 100%;
         body {
-            background : url(http://architectureimg.com/wp-content/uploads/2016/08/skyscrapers-sunset-vancouver-peaceful-ocean-skyscrapers-building-evening-city-lights-canada-road-splendor-sky-nature-skyline-architecture-beauty-beautiful-lovely-1080p-wallpaper.jpg) no-repeat center center fixed;
+            background : url(../images/bg.jpg) no-repeat center center fixed;
             background-size:cover;
         }
         
