--- a/css/surveyEntry.scss
+++ b/css/surveyEntry.scss
@@ -1,5 +1,5 @@
 body {
-    background: url(http://3.bp.blogspot.com/-M2b-nJgY-Mo/Ujg2f2g2iGI/AAAAAAAABTI/SHss8BPcjQ8/s1600/wooden-new-simple-plain-image-wallpaper.jpg) no-repeat center center fixed;
+    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoyoDaV9F1Ofhv4ANmbS3LqqULiH5Lt_7aMuD-0il_WuR78QSg) no-repeat center center fixed;
     background-size: cover; 
 
 }
@@ -15,7 +15,6 @@ body {
     input {
         background: rgba(174, 218, 231, 0.53);
         color : #000066;
-        border-color: #000066;
     }
     .submit_button {
         color:white;
