--- a/css/surveyResult.scss
+++ b/css/surveyResult.scss
@@ -1,3 +1,13 @@
+table {
+    td,tr {
+        background: #D5EEED;
+    }
+
+}
+
 body {
-    color:red;
+    display: none;
+}
+.alert_box{
+    margin: 5px;
 }
