--- a/css/surveyEntry.css
+++ b/css/surveyEntry.css
@@ -1,5 +1,5 @@
 body {
-  background: url(http://3.bp.blogspot.com/-M2b-nJgY-Mo/Ujg2f2g2iGI/AAAAAAAABTI/SHss8BPcjQ8/s1600/wooden-new-simple-plain-image-wallpaper.jpg) no-repeat center center fixed;
+  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoyoDaV9F1Ofhv4ANmbS3LqqULiH5Lt_7aMuD-0il_WuR78QSg) no-repeat center center fixed;
   background-size: cover; }
 
 .nav a {
@@ -11,8 +11,7 @@ body {
   font-size: 20px; }
   .form_box input {
     background: rgba(174, 218, 231, 0.53);
-    color: #000066;
-    border-color: #000066; }
+    color: #000066; }
   .form_box .submit_button {
     color: white;
     background: #000066; }
