--- a/css/surveyEntry.css
+++ b/css/surveyEntry.css
@@ -1,5 +1,5 @@
 body {
-  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoyoDaV9F1Ofhv4ANmbS3LqqULiH5Lt_7aMuD-0il_WuR78QSg) no-repeat center center fixed;
+  background: url(../images/bluegreen.jpg) no-repeat center center fixed;
   background-size: cover; }
 
 .nav a {
